overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ a {
 }
 
 .header{
-
+  max-width: 100vw;
   display: flex;
   width: 100%;
   position: fixed;
@@ -721,8 +721,15 @@ img, .item-content {
 }
 .profile-card-inf__title {
   font-weight: 700;
-  font-size: 27px;
+  font-size: 1rem;
   color: var(--color-main);
+}
+
+@media screen and (max-width: 550px) {
+  .profile-card-inf__item {
+    padding: 10px 20px;
+    min-width: 120px;
+  }
 }
 .profile-card-inf__txt {
   font-weight: 500;
